1.0.2/README.md
# 数学文書スタイル (jnote.typ)

[🔙readme](../README.md) · [板書記法 AUTHORING.md](../AUTHORING.md)

## 概要

`jnote.typ`は日本語数学文書の作成に特化したTypstスタイルファイルです.
定理、定義、証明などの数学要素を表示し, 数式の可読性を向上させます.

## 機能

### 主要な関数

#### `jnote(title: none, date: none, affiliation: none, author: none, dark: false, doc)`
数学文書全体を包むメイン関数です。
- **引数**:
  - `title` - 文書のタイトル（オプション）
  - `date` - 文書の日付（オプション）
  - `affiliation` - 所属（オプション）
  - `author` - 著者名（オプション）
  - `dark` - ダークモード（`true`で有効、既定は`false`）
  - `doc` - 文書の内容
- **機能**: 
  - A4用紙、20mmマージン、11ptフォントサイズを設定
  - 見出し番号を自動付与（1.1.1形式）
  - 数式番号を章番号付きで管理（(1.1)形式）
  - 図表番号を章番号付きで管理（1.1形式）
  - 章が変わる際にカウンターをリセット
  - `dark: true`で背景を暗色・文字を明色にし、各コールアウト（定義・定理等）の背景色と枠線色をダークモード向けに切り替え

## ダークモード

`jnote(dark: true, ...)`でダークモードを有効にできます。
ページ背景・本文の色に加え、`definition`〜`example`の各ボックスの
背景色と枠線色がダークモード向けに自動で調整されます。

```typst
#import "@original/jnote:1.0.2": *
#show: doc => jnote(title: "ノート", dark: true, doc)

= 章
#definition[定義本文]
#theorem[定理本文]
```

#### `theorem(title: none, id: none, it)`
定理を表示する関数です。
- **引数**:
  - `title` - 定理のタイトル（オプション）
  - `id` - 参照用のID（オプション）
  - `it` - 定理の内容
- **表示**: 黒い枠線で囲まれた定理ボックス

#### `definition(title: none, id: none, it)`
定義を表示する関数です。
- **引数**:
  - `title` - 定義のタイトル（オプション）
  - `id` - 参照用のID（オプション）
  - `it` - 定義の内容
- **表示**: シルバーの背景色で囲まれた定義ボックス

#### `proposition(title: none, id: none, it)`
命題を表示する関数です。
- **引数**:
  - `title` - 命題のタイトル（オプション）
  - `id` - 参照用のID（オプション）
  - `it` - 命題の内容
- **表示**: 薄いグレーの背景とグレーの枠線

#### `lemma(title: none, id: none, it)`
補題を表示する関数です。
- **引数**:
  - `title` - 補題のタイトル（オプション）
  - `id` - 参照用のID（オプション）
  - `it` - 補題の内容
- **表示**: 太いシルバーの枠線

#### `corollary(title: none, id: none, it)`
系を表示する関数です。
- **引数**:
  - `title` - 系のタイトル（オプション）
  - `id` - 参照用のID（オプション）
  - `it` - 系の内容
- **表示**: 細いシルバーの枠線

#### `remark(title: none, id: none, it)`
註を表示する関数です。
- **引数**:
  - `title` - 註のタイトル（オプション）
  - `id` - 参照用のID（オプション）
  - `it` - 註の内容
- **表示**: 左側のみ黒い枠線

#### `example(title: none, it)`
例を表示する関数です。
- **引数**:
  - `title` - 例のタイトル（オプション）
  - `it` - 例の内容
- **表示**: 左側のみグレーの枠線

#### `proof(title: none, it)`
証明を表示する関数です。
- **引数**:
  - `title` - 証明のタイトル（オプション）
  - `it` - 証明の内容
- **表示**: 「証明: 」で始まり、末尾に□（証明終了記号）を右寄せで表示

## 数式番号の仕組み

`jnote`関数では、参照されていない数式（ラベル未設定）に番号を付けないようにするため、以下の仕組みを実装しています。

### 原理

1. **マッチ条件**
   `show math.equation` は方程式要素に適用される。条件は「ブロック式かつラベル未設定」。`it.block` と `not it.has("label")` がそれ。

2. **初回インクリメント**
   `math.equation` は生成時にカウンタ `math.equation` を進める。ここで 1 加算される。

3. **デクリメントで相殺**
   ルール内で `counter(math.equation).update(v => v - 1)` を実行。初回の+1を取り消す。以降に作り直す式は `numbering: none` なのでカウンタは進まない。よって最終的な通算は±0。

4. **再構築**
   `math.equation(it.body, block: true, numbering: none)` で同一内容を番号なしのブロック式として作り直す。これ自体は再び `show math.equation` の対象になりうる。

5. **再帰停止のトリガ**
   `#label("_skip-eq")` を付けると、その新要素は「ラベルあり」になる。次回のパターン判定で `it.has("label")` が真になるため、同じ `show` には再マッチしない。これが無限再帰停止の実体。

6. **「空白ラベル」小技との違い**
   以前は `label(" ")` が「見た目は空、判定はラベルあり」という抜け道として通っていた。最近の変更で空ラベル系の扱いが厳格化し、`""` は不可。スペースは形式上は非空なので現状通るが、将来仕様に依存する。`"_skip-eq"` のようなダミー名に切り替えるのが安全。

### 注意点

* ラベルは本来一意。文書内で同じ `"_skip-eq"` を複数回使うと衝突する。衝突が起きない運用（そのルールが当たる式が1つだけ等）なら問題なし。多数に適用する場合は一意化（例: 接尾にカウンタ値や位置情報を付ける）を検討。

* 番号は付けないが、ラベル自体は参照可能になる。意図しない参照を避けたいなら、ユーザが使わない接頭辞を採用するか、参照しない前提で運用する。